src/index.css
/* body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
} */

.showFavorite {
display: block;

}

.hideFavorite {
display: none;

}

.container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

header {
  width: 100%;
  background-image: url('https://images.unsplash.com/photo-1551024709-8f23befc6f87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80');
  display: flex;
  background-size: cover;
  color: white;
  text-shadow: 4px 4px 5px black;
  justify-content: center;
  align-items: center;
  height: 200px;
  background-position-y: -350px;
  font-size: 40px;
}

.info {
  display: flex;
  flex-wrap: wrap;
}

.drink {
  margin: 50px;
  font-size: 20px;
}

